--- a/pollux_interface/templates/app_scenario_analysis_p2h2case.html
+++ b/pollux_interface/templates/app_scenario_analysis_p2h2case.html
@@ -180,6 +180,9 @@
                             Load CSV
                         </button>
                         <input accept=".csv" id="power_supply_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <button class="btn btn-secondary" id="power_supply_profile_plot_button" data-toggle="modal" href="#myProfileModal" >
+                            <i class="tim-icons icon-sound-wave"></i>
+                        </button>
                         </td>
                     </tr>
                     <tr>
@@ -193,6 +196,9 @@
                             Load CSV
                         </button>
                         <input accept=".csv" id="power_demand_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <button class="btn btn-secondary" id="power_demand_profile_plot_button" data-toggle="modal" href="#myProfileModal" >
+                            <i class="tim-icons icon-sound-wave"></i>
+                        </button>
                         </td>
                     </tr>
                     <tr>
@@ -206,6 +212,9 @@
                             Load CSV
                         </button>
                         <input accept=".csv" id="hydrogen_demand_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <button class="btn btn-secondary" id="hydrogen_demand_profile_plot_button" data-toggle="modal" href="#myProfileModal" >
+                            <i class="tim-icons icon-sound-wave"></i>
+                        </button>
                         </td>
                     </tr>
                     </tbody>
@@ -241,7 +250,7 @@
                     <tr>
                         <td>
                         <div class="form-control" id="splitter1_profile_label">
-                            Power splitter control profile (dimensionless with range: [0, 1])
+                            Power splitter profile (range: [0, 1])
                         </div>
                         </td>
                         <td>
@@ -249,12 +258,15 @@
                             Load CSV
                         </button>
                         <input accept=".csv" id="splitter1_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <button class="btn btn-secondary" id="splitter1_profile_plot_button" data-toggle="modal" href="#myProfileModal" >
+                            <i class="tim-icons icon-sound-wave"></i>
+                        </button>
                         </td>
                     </tr>
                     <tr>
                         <td>
                         <div class="form-control" id="splitter2_profile_label">
-                            Hydrogen splitter control profile (dimensionless with range: [0, 1])
+                            Hydrogen splitter profile (range: [0, 1])
                         </div>
                         </td>
                         <td>
@@ -262,12 +274,15 @@
                             Load CSV
                         </button>
                         <input accept=".csv" id="splitter2_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <button class="btn btn-secondary" id="splitter2_profile_plot_button" data-toggle="modal" href="#myProfileModal" >
+                            <i class="tim-icons icon-sound-wave"></i>
+                        </button>
                         </td>
                     </tr>
                     <tr>
                         <td>
                         <div class="form-control" id="hydrogen_storage_profile_label">
-                            Gas storage mass flow out control profile [kg/h]
+                            Gas storage massflow out profile [kg/h]
                         </div>
                         </td>
                         <td>
@@ -275,6 +290,9 @@
                             Load CSV
                         </button>
                         <input accept=".csv" id="hydrogen_storage_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <button class="btn btn-secondary" id="hydrogen_storage_profile_plot_button" data-toggle="modal" href="#myProfileModal" >
+                            <i class="tim-icons icon-sound-wave"></i>
+                        </button>
                         </td>
                     </tr>
                     </tbody>
