--- a/pollux_interface/templates/app_scenarioanalysis.html
+++ b/pollux_interface/templates/app_scenarioanalysis.html
@@ -164,10 +164,7 @@
                                         <h3 id="myModalLabel1" style="color: black">Input Profile</h3>
                                     </div>
                                     <div class="modal-body">
-
-                                    </div>
-                                    <div class="modal-footer">
-
+                                        <div id="profiles_plot" style="width:100%;"></div>
                                     </div>
                                 </div>
                             </div>
