WIP: GUI development for power to heat demo needs to be tested and debugged when power to heat application is fully functional

--- a/pollux_interface/templates/app_scenarioanalysis.html
+++ b/pollux_interface/templates/app_scenarioanalysis.html
@@ -252,11 +252,11 @@
 
 
 <!-- App-specific js files -->
-<script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/diagram.js') }}"></script>
-<script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/scenario_management.js') }}"></script>
-<script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/parameterstable.js') }}"></script>
-<script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/profiles.js') }}"></script>
-<script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/api.js') }}"></script>
+<script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/diagram.js') }}" defer></script>
+<script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/parameterstable.js') }}" defer></script>
+<script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/scenario_management.js') }}" defer></script>
+<script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/profiles.js') }}" defer></script>
+<script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/api.js') }}" defer></script>
 
 
 {% endblock %}
