update adder and splitter

--- a/pollux_interface/templates/app_diagram.html
+++ b/pollux_interface/templates/app_diagram.html
@@ -45,8 +45,10 @@
         style="width:150px; height:100px" type="button" value="Heat Storage" />
     <input class="btn btn-default btn-sm" id="heat_pump" onclick="addHeatPump();" style="width:150px; height:100px"
         type="button" value="Heat Pump" />
-    <input class="btn btn-default btn-sm" id="node" onclick="addNode();" style="width:150px; height:100px" type="button"
-        value="Node" />
+    <input class="btn btn-default btn-sm" id="adder" onclick="addAdder();" style="width:150px; height:100px" type="button"
+        value="Adder" />
+    <input class="btn btn-default btn-sm" id="splitter" onclick="addSplitter();" style="width:150px; height:100px" type="button"
+        value="Splitter" />
 </div>
 <div class="container">
     <div class="row my-3">
