--- a/pollux_interface/templates/base.html
+++ b/pollux_interface/templates/base.html
@@ -88,6 +88,7 @@
                                 </a>
                             </li>
                         </ul>
+                        <a href="/documentation"><i class="tim-icons icon-paper"></i> Documentation</a>
                     </li>
 
                 </ul>
@@ -119,6 +120,7 @@
                                     </i>
                                     Open Project
                                 </li>
+                                {% if not session.project_name == '' %}
                                 <li class="nav-item dropdown-item"><a onclick="close_project()"><i
                                     class="fa fa-close"></i>Close Project</a>
                                 </li>
@@ -131,6 +133,7 @@
                                         Delete Project
                                     </a>
                                 </li>
+                                {% endif %}
 
                             </ul>
                         </li>
